fixing contact page overflow

--- a/contact page/css/contact.css
+++ b/contact page/css/contact.css
@@ -25,10 +25,12 @@
 
 
 ::-webkit-scrollbar {
+  display: none;
   -webkit-appearance: none;
   width: 7px;
 }
 ::-webkit-scrollbar-thumb {
+  display: none;
   border-radius: 4px;
   background-color: transparent;
   box-shadow: inset 0 0 12px -1px var(--clr-primary-700);
@@ -49,10 +51,12 @@
 html{
   scroll-behavior: smooth;
   position: relative;
+  width: 100vw;
 }
 
 
 body{
+  padding: 0;
   margin: 0 auto;
   background-color: var(--clr-background);
   width: min(90vw, 90rem);
@@ -63,7 +67,7 @@ body{
 @media screen and (max-width: 600px) {
  body{
   width: 100vw;
- } 
+ }
 }
 
 
@@ -270,12 +274,13 @@ header{
 
 #main{
   width: 100%;
+  overflow-x: hidden;
 }
 
 
 
 #page1{
-  width: min(90vw, 90rem);
+  width: min(100%, 90rem);
   display: grid;
   place-items: center;
   color: var(--clr-font);
@@ -376,6 +381,7 @@ header{
   box-shadow: 0 0 20px -7px var(--clr-font);
   border: none;
   margin-top: 0.4em;
+  cursor: pointer;
 }
 
 #subject label{
